manifests/ping-pong/pv/persistent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: logs-claim
      containers:
        - name: ping-pong-app
          image: ping-pong-app:1.13
          volumeMounts:
          - name: shared-logs
            mountPath: /logs
        - name: log-output-app
          image: log-output-app:1.11
          volumeMounts:
          - name: shared-logs
            mountPath: /logs
